strategy/Kimi_Agent_ResilienceAI_AI_Pipeline/resilience_ai_analysis/istio/compression.yaml
# Gzip compression for responses
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: gzip-compression
  namespace: resilience-ai
spec:
  workloadSelector:
    labels:
      app: api-gateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.compressor
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
          compressor_library:
            name: text_optimized
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
              memory_level: 9
              compression_level: BEST_SPEED
              compression_strategy: DEFAULT_STRATEGY
          response_direction_config:
            common_config:
              enabled:
                default_value: true
                runtime_key: response_compression_enabled
              content_type:
              - text/html
              - text/plain
              - text/css
              - application/javascript
              - application/json
              - application/xml
              - text/xml
              min_content_length: 100
          request_direction_config:
            common_config:
              enabled:
                default_value: true
                runtime_key: request_decompression_enabled
